--- a/css/estilo.css
+++ b/css/estilo.css
@@ -77,6 +77,40 @@ nav.navbar-transparente{
 	color: black;
 }
 
+/*---------Rodapé----------*/
+footer{
+	background: #000;
+	padding: 50px 0px 20px 0px;
+	position: relative;
+}
+
+footer h4{
+	color: #919496;
+	font-size: 0.8em;
+	text-transform: uppercase;
+}
+
+footer .navbar-nav a{
+	color: white;
+	font-size: 0.8em;
+
+}
+
+footer .navbar-nav a:hover{
+	color: #9bf0e1;
+	font-size: 0.8em;
+	text-decoration: none;
+
+}
+
+footer ul{
+	list-style: none;
+}
+
+footer ul li{
+	float: right;
+	float: 0 5px;
+}
 
 
 /*---------Tipografia----------*/
@@ -92,6 +126,7 @@ h1{
 @media (max-width: 575px) { 
 	.btn-custom{
 		margin: 10px 15px;
+		font-size: 1em;
 	}
  }
 
@@ -103,6 +138,7 @@ h1{
 	
 	.btn-custom{
 		margin: 10px 15px;
+
 	}
  }
 
